--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ clickclick==1.2.2
 configparser==3.5.0
 connexion==1.5.2
 cryptography==2.3.1
+dateutils==0.6.6
 Flask==1.0.2
 Flask-Cors==3.0.6
 good-morning==0.1.0
@@ -28,6 +29,7 @@ PyYAML==3.13
 requests==2.19.1
 six==1.11.0
 SQLAlchemy==1.2.11
+stock-extractor==0.2
 swagger-spec-validator==2.3.1
 urllib3==1.23
 Werkzeug==0.14.1
