--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ configparser==3.5.0
 connexion==1.5.2
 cryptography==2.3.1
 dateutils==0.6.6
+decorator==4.3.0
 Flask==1.0.2
 Flask-Cors==3.0.6
 good-morning==0.1.0
@@ -17,19 +18,25 @@ inflection==0.3.1
 itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
+lxml==4.3.1
 MarkupSafe==1.0
 mysql-connector==2.1.6
 numpy==1.15.1
 pandas==0.23.4
+pbr==5.1.1
 pycparser==2.18
 PyMySQL==0.9.2
 python-dateutil==2.7.3
 pytz==2018.5
 PyYAML==3.13
 requests==2.19.1
+selenium==3.141.0
 six==1.11.0
 SQLAlchemy==1.2.11
+sqlalchemy-migrate==0.11.0
+sqlparse==0.2.4
 stock-extractor==0.2
 swagger-spec-validator==2.3.1
+Tempita==0.5.2
 urllib3==1.23
 Werkzeug==0.14.1
