--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,42 @@
 asn1crypto==0.24.0
-attrs==18.2.0
-beautifulsoup4==4.7.1
-certifi==2018.11.29
-cffi==1.12.1
+beautifulsoup4==4.6.3
+certifi==2018.8.24
+cffi==1.11.5
 chardet==3.0.4
-Click==7.0
+click==6.7
 clickclick==1.2.2
-configparser==3.7.3
-connexion==2.2.0
-cryptography==2.5
+configparser==3.5.0
+connexion==1.5.2
+cryptography==2.3.1
 dateutils==0.6.6
-decorator==4.3.2
+decorator==4.3.0
 Flask==1.0.2
-Flask-Cors==3.0.7
+Flask-Cors==3.0.6
 good-morning==0.1.0
-idna==2.8
+idna==2.7
 inflection==0.3.1
-itsdangerous==1.1.0
+itsdangerous==0.24
 Jinja2==2.10
-jsonschema==3.0.0
+jsonschema==2.6.0
 lxml==4.3.1
-MarkupSafe==1.1.1
+MarkupSafe==1.0
 mysql-connector==2.1.6
-numpy==1.16.1
-openapi-spec-validator==0.2.5
-pandas==0.24.1
-pbr==5.1.2
-pycparser==2.19
-PyMySQL==0.9.3
-pyrsistent==0.14.11
-python-dateutil==2.8.0
-pytz==2018.9
+numpy==1.15.1
+pandas==0.23.4
+pbr==5.1.1
+pycparser==2.18
+PyMySQL==0.9.2
+python-dateutil==2.7.3
+pytz==2018.5
 PyYAML==3.13
-requests==2.21.0
+requests==2.19.1
 selenium==3.141.0
-six==1.12.0
-soupsieve==1.8
-SQLAlchemy==1.2.18
-sqlalchemy-migrate==0.12.0
+six==1.11.0
+SQLAlchemy==1.2.11
+sqlalchemy-migrate==0.11.0
 sqlparse==0.2.4
 stock-extractor==0.2
-swagger-spec-validator==2.4.3
+swagger-spec-validator==2.3.1
 Tempita==0.5.2
-urllib3==1.24.1
+urllib3==1.23
 Werkzeug==0.14.1
