restructured python fun

--- a/app/main/api/xtract_api_spec.yaml
+++ b/app/main/api/xtract_api_spec.yaml
@@ -24,7 +24,7 @@ paths:
   /stockdata/{ticker}:
     get:
       summary: Returns DivGro data for the ticker
-      #operationId: api.stockdata.getStockData
+      #operationId: api.stockdata.get
       description: Pass ticker type and get StockData. From DB if cached or via call outbound. Can be used to force a refresh
       produces:
       - "application/xml"
@@ -43,25 +43,6 @@ paths:
       responses:
         200:
           description: stockdata matching ticker
-          schema:
-            $ref: '#/definitions/StockData'
-        400:
-          description: Haven't got this one
-  /stockinfo/{ticker}:
-    get:
-      summary: Key data of the stock without details - useful to get the updated field and know whether to force refresh
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: ticker
-        description: ticker symbol of stock we want
-        in: path
-        required: true
-        type: string
-      responses:
-        200:
-          description: stockdata currency
           schema:
             $ref: '#/definitions/StockData'
         400:
