--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pytest = "^5.4.1"
 black = "^19.10b0"
 flask-bcrypt = "^0.7.1"
 flask_testing = "^0.8.0"
+Flask-Migrate = "^2.5.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
