--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ flask-restplus = "^0.13.0"
 Flask-Migrate = "^2.5.3"
 pyjwt = "^1.7.1"
 Flask-Script = "^2.0.6"
+gunicorn = "^20.0.4"
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
 black = "^19.10b0"
